[project]
name = "ai-agent"
version = "0.1.0"
description = "一坨大便"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "cryptography>=45.0.5",
    "dask>=2025.7.0",
    "easyocr>=1.7.1",
    "fastapi>=0.116.1",
    "flask>=3.1.1",
    "gradio>=5.38.2",
    "matplotlib>=3.10.3",
    "modelscope>=1.28.1",
    "moviepy>=2.2.1",
    "mcp", 
    "numpy>=2.3.2",
    "openai>=1.97.1",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pendulum>=3.1.0",
    "pillow>=11.3.0",
    "polars>=1.31.0",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    "pytesseract>=0.3.10",
    "PyMuPDF>=1.24.3",
    "requests>=2.32.4",
    "rich>=14.1.0",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "transformers>=4.41.2",
    "urllib3>=2.5.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
