[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent"
version = "1.0.0"
description = "一坨大便"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles==24.1.0",
        "altgraph==0.17.4",
        "annotated-types==0.7.0",
        "anyio==4.9.0",
        "attrs==25.3.0",
        "audioop-lts==0.2.1",
        "black==25.1.0",
        "blinker==1.9.0",
        "brotli==1.1.0",
        "certifi==2025.7.14",
        "cffi==1.17.1",
        "charset-normalizer==3.4.2",
        "click==8.2.1",
        "cloudpickle==3.1.1",
        "colorama==0.4.6",
        "contourpy==1.3.3",
        "cryptography==45.0.5",
        "cycler==0.12.1",
        "dask==2025.7.0",
        "decorator==5.2.1",
        "distro==1.9.0",
        "easyocr==1.7.2",
        "et-xmlfile==2.0.0",
        "fastapi==0.116.1",
        "ffmpy==0.6.1",
        "filelock==3.18.0",
        "flask==3.1.1",
        "fonttools==4.59.0",
        "fsspec==2025.7.0",
        "geographiclib==2.0",
        "geopy==2.4.1",
        "gradio==5.38.2",
        "gradio-client==1.11.0",
        "groovy==0.1.2",
        "h11==0.16.0",
        "httpcore==1.0.9",
        "httpx==0.28.1",
        "httpx-sse==0.4.1",
        "huggingface-hub==0.34.2",
        "idna==3.10",
        "imageio==2.37.0", 
        "imageio-ffmpeg==0.6.0",
        "iniconfig==2.1.0",
        "itsdangerous==2.2.0",
        "jinja2==3.1.6",
        "jiter==0.10.0",
        "joblib==1.5.1",
        "jsonschema==4.25.0",
        "jsonschema-specifications==2025.4.1",
        "kiwisolver==1.4.8",
        "lazy-loader==0.4",
        "locket==1.0.0",
        "lxml==6.0.0",
        "markdown-it-py==3.0.0",
        "markupsafe==3.0.2",
        "matplotlib==3.10.3",
        "mcp==1.12.2",
        "mcp-client==0.0.0",
        "mdurl==0.1.2",
        "modelscope==1.28.1",
        "moviepy==2.2.1",
        "mpmath==1.3.0",
        "mypy-extensions==1.1.0",
        "networkx==3.5",
        "ninja==1.11.1.4",
        "numpy==2.3.2",
        "openai==1.97.1",
        "opencv-python==4.11.0.86",
        "opencv-python-headless==4.11.0.86",
        "openpyxl==3.1.5",
        "orjson==3.11.1",   
        "packaging==25.0",
        "pandas==2.3.1",
        "partd==1.4.2",
        "pathspec==0.12.1",
        "pefile==2023.2.7",
        "pendulum==3.1.0",
        "pillow==11.3.0",
        "platformdirs==4.3.8",
        "pluggy==1.6.0",
        "polars==1.31.0",
        "proglog==0.1.12",
        "pyclipper==1.3.0.post6",
        "pycparser==2.22",
        "pydantic==2.11.7",
        "pydantic-core==2.33.2",
        "pydantic-settings==2.10.1",
        "pydub==0.25.1",
        "pygments==2.19.2",
        "pyinstaller==6.15.0",
        "pyinstaller-hooks-contrib==2025.8",
        "pyparsing==3.2.3",
        "pytesseract==0.3.13",
        "pytest==8.4.1",
        "python-bidi==0.6.6",
        "python-dateutil==2.9.0.post0",
        "python-docx==1.2.0",
        "python-dotenv==1.1.1",
        "python-multipart==0.0.20",
        "python-pptx==1.0.2",
        "pytz==2025.2",
        "pywin32==311",
        "pywin32-ctypes==0.2.3",
        "pyyaml==6.0.2",
        "referencing==0.36.2",
        "regex==2024.11.6",
        "requests==2.32.4",
        "rich==14.1.0",
        "rpds-py==0.26.0",
        "ruff==0.12.5",
        "safehttpx==0.1.6",
        "safetensors==0.5.3",
        "scikit-image==0.25.2",
        "scikit-learn==1.7.1",
        "scipy==1.16.1",
        "seaborn==0.13.2",
        "semantic-version==2.10.0",
        "setuptools==80.9.0",
        "shapely==2.1.1",
        "shellingham==1.5.4",
        "six==1.17.0",
        "sniffio==1.3.1",
        "sse-starlette==3.0.2",
        "starlette==0.47.2",
        "sympy==1.14.0",
        "threadpoolctl==3.6.0",
        "tifffile==2025.6.11",
        "tokenizers==0.21.4",
        "tomlkit==0.13.3",
        "toolz==1.0.0",
        "torch==2.7.1",
        "torchvision==0.22.1",
        "tqdm==4.67.1",
        "transformers==4.54.0",
        "typer==0.16.0",
        "typing-extensions==4.14.1",
        "typing-inspection==0.4.1",
        "tzdata==2025.2",
        "urllib3==2.5.0",
        "uvicorn==0.35.0",
        "websockets==15.0.1",
        "werkzeug==3.1.3",
        "xlsxwriter==3.2.5",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
